--- a/_posts/project/2018-12-11-word0.markdown
+++ b/_posts/project/2018-12-11-word0.markdown
@@ -59,13 +59,13 @@ description: Word Project #0
 이번 낱말 프로젝트에서 다뤄볼 것은
 
 {% highlight raw %}
-1. 내 북 위시리스트에 있는 책들의 제목에 가장 자주 등장하는 단어는 무엇인가?
+1. 내 북 위시리스트에 있는 책들의 <span class="evidence">제목에 가장 자주 등장하는 단어</span>는 무엇인가?
 
-2. 내 북 위시리스트에 가장 많이 있는 책 시리즈는 무엇인가?
+2. 내 북 위시리스트에 가장 많이 있는 <span class="evidence">책 시리즈</span>는 무엇인가?
 
-3. 내 북 위시리스트에 가장 많이 있는 책 출판사는 무엇인가?
+3. 내 북 위시리스트에 가장 많이 있는 <span class="evidence">책 출판사</span>는 무엇인가?
 
-4. 내 북 위시리스트에 가장 많이 있는 책 분야는 무엇인가?
+4. 내 북 위시리스트에 가장 많이 있는 <span class="evidence">책 분야</span>는 무엇인가?
 {% endhighlight %}
 ​
 입니다.
