--- a/_posts/project/2018-12-28-word1.markdown
+++ b/_posts/project/2018-12-28-word1.markdown
@@ -31,12 +31,12 @@ description: Word Project #1
 
 ![1](http://hailey99.github.io/assets/images/1-1.png "Site:Aladin")
 
-알라딘에선 보관함의 책 리스트를 '.xls'파일로 제공하고 있는데 이 확장자는 R에서 지원을 하지 않는 듯 해서, save as를 이용해 *확장자를 '.xlsx'* 로 바꿔주었다. 사실 csv파일 쓰는게 제일 편한데 유니코드 인코딩 어쩌구 문제로 한글이 깨지길래 그냥 xlsx파일을 사용했다.
+알라딘에선 보관함의 책 리스트를 '.xls'파일로 제공하고 있는데 이 확장자는 R에서 지원을 하지 않는 듯 해서, save as를 이용해 <span class="evidence">확장자를 '.xlsx'</span> 로 바꿔주었다. 사실 csv파일 쓰는게 제일 편한데 유니코드 인코딩 어쩌구 문제로 한글이 깨지길래 그냥 xlsx파일을 사용했다.
 
 ![](http://hailey99.github.io/assets/images/1-2.png "Organizing Excel Sheet")
 
 
-엑셀 파일을 열면 이런 식으로 간소한 설명이 적혀 있는데, 분석을 쉽게 하기 위해(첫 열을 header로 자동 지정하기 위해) 엑셀 자체에서 1,2,3,4열을 지웠다.
+엑셀 파일을 열면 이런 식으로 간소한 설명이 적혀 있는데, 분석을 쉽게 하기 위해(<span class="evidence">첫 열을 header로 자동 지정하기 위해</span>) 엑셀 자체에서 1,2,3,4열을 지웠다.
 ​
 
 ​![](http://hailey99.github.io/assets/images/1-3.png)
@@ -57,15 +57,17 @@ description: Word Project #1
 
 
 이번 소프로젝트에서는 책 타이틀 column만 있으면 돼서 책 제목만 모아서 txt 파일을 만들어 그걸로 분석했다.
+
 *데이터프레임의 한 column만 지정해서 그 행 텍스트만 뽑는 법 아시는 분 댓글 부탁드립니다...!*
 
-이 부분에서만 패키지가 4개가 쓰였다. 워드클라우드를 만들기 위해 설치한 패키지들도 있었는데 R plots 창에서 한글이 깨져버리는 문제를 해결하지 못했다.
+
+이 부분에서만 패키지가 4개가 쓰였다. 워드클라우드를 만들기 위해 설치한 패키지들도 있었는데 *R plots 창에서 한글이 깨져버리는 문제를 해결하지 못했다.*
 
 ​![](http://hailey99.github.io/assets/images/1-6.png)
 
 
 
-그 다음엔 *단어(명사)목록과 등장 횟수를 표로 정리하고, 탑 20을 빈도수로 정렬* 했다
+그 다음엔 <span class="evidence">단어(명사)목록과 등장 횟수를 표로 정리하고, 탑 20을 빈도수로 정렬<span> 했다
 
 이렇게 하고 나면
 
@@ -85,7 +87,7 @@ Drum roll please!
 
 ​
 
-사실 이게 진짜_최종_은 아니고, *'2글자 이상의 단어'라는 조건을 지정해주기 전의 raw data* 라고 보면 된다.
+사실 이게 진짜_최종_은 아니고, <span class="evidence">'2글자 이상의 단어'라는 조건을 지정해주기 전의 raw data</span> 라고 보면 된다.
 ​
 
 ​
@@ -126,10 +128,6 @@ Drum roll please!
 반양장 제외 1위인 '사랑'이라는 단어는 꽤 예측 가능했는데 왜냐면 난 찐으로 사랑을 믿는 사람이기 때무니다,,
 
 ​
-
-그 다음으로 '우리', '사람'.. 이런 결과가 나오는 걸 보고 내가 정말 책 편식하는구나 생각했다. ㅋㅋㅋ (이 질문에 대한 답은 책 분야편에서 찾을 수 있다)  
-​
-
 
 
 **결론: '내 북 위시 리스트에 가장 자주 등장하는 단어가 뭘까?'라는 질문은 당신을 설명해주는 일종의 리트머스 시험지가 될 수 있다!**
