--- a/_posts/project/2018-12-30-word2.markdown
+++ b/_posts/project/2018-12-30-word2.markdown
@@ -15,7 +15,7 @@ description: Word Project #2
 
 **'내가 제일 좋아하는 책 분야는 뭘까?'**
 
-오늘은 내 위시 리스트 속에 가장 많이 들어있는 책의 분야!를 찾아보았다. 편의를 위해 한 칸씩 띄었지만 알고 보면 이어진 *코드 한 줄만으로* 결과를 도출해낼 수 있었다.
+오늘은 내 위시 리스트 속에 가장 많이 들어있는 책의 분야!를 찾아보았다. 편의를 위해 한 칸씩 띄었지만 알고 보면 이어진 <span class="evidence">코드 한 줄만으로</span> 결과를 도출해낼 수 있었다.
 ​
 ![](http://hailey99.github.io/assets/images/2-1.png)
 
@@ -82,7 +82,7 @@ View(Fields)
 
 ![](http://hailey99.github.io/assets/images/2-3.png)
 
-*'외국'* 이라는 분류는 무엇인가? '외국 소설'도 아니고, '~~국 소설'도 아니고 저 흐리멍텅 애매모호 아리까리한 분류는 무엇인가???
+<span class="evidence">'외국'</span> 이라는 분류는 무엇인가? '외국 소설'도 아니고, '~~국 소설'도 아니고 저 흐리멍텅 애매모호 아리까리한 분류는 무엇인가???
 
 ​
 
@@ -125,7 +125,7 @@ View(Fields)
 그럼 이런 결과가 나오는데
 
 
-페터 빅셀(스위스), 캐롤 쉴즈(캐나다), 리처드 플래너건(호주), 린이한(대만) 등등 정말 말그대로 '기타 국가'의 글들이었다.
+<span class="evidence">페터 빅셀(스위스), 캐롤 쉴즈(캐나다), 리처드 플래너건(호주), 린이한(대만)</span> 등등 정말 말그대로 '기타 국가'의 글들이었다.
 ​
 
 외국 사람들한테는 한국 소설이 '기타 국가 소설'이겠지? 한 언어로 쓰인 글을 번역하게 되면 그 뉘앙스를 100퍼센트 살릴 수 없다는 건 언제나 아쉽다. 이러한 이유로, 나와 같은 언어를 공유하는 분의 글이 참 소중하다.
