--- a/_posts/project/2019-01-03-word3.markdown
+++ b/_posts/project/2019-01-03-word3.markdown
@@ -77,7 +77,7 @@ description: Word Project #3
 
 ![](http://hailey99.github.io/assets/images/3-4.png)
 
-1위는 약 300권의 책 중에 45권으로 *'문학동네'*
+1위는 약 300권의 책 중에 45권으로 **'문학동네'**
 
 이 결과는 사실 꽤 의외였다. 왜냐면 민음사가 압도적으로 1위를 할 거라고 예상했기 때문이었다. 그래서 위시리스트 안 문학동네와 민음사의 책 리스트를 비교해보았더니, 민음사의 책들은 거의 전집, 시리즈물이었고 문학동네의 책들은 그냥 개별적인 책인 경우가 대다수였다.
 
@@ -87,7 +87,7 @@ description: Word Project #3
 
 ​
 
-2위는 32권, *민음사*
+2위는 32권, **민음사**
 
 긴 말은 제가 어제 남긴 먹먹문으로 대신합니다.
 
@@ -111,7 +111,7 @@ description: Word Project #3
 
 !is.na 라는 명령어를 처음 사용했는데, na(결측치)가 !(아닌) 것만 필터링해 결과를 뽑아낸다는 뜻이다.
 
-특정 시리즈가 아닌 책들을 효과적으로 걸러낸 뒤 시리즈인 책들에서만 결과값을 찾기 위해 사용했다.  
+<span class="evidence">특정 시리즈가 아닌 책들을 효과적으로 걸러낸 뒤 시리즈인 책들에서만 결과값을 찾기 위해 사용했다.  </span>
 
 ​
 
@@ -140,7 +140,8 @@ select를 해서 그 시리즈 번호에 맞는 시리즈명을 나오게 하고
 ​
 
 ![](http://hailey99.github.io/assets/images/3-9.png)
-####gsub을 사용해서 series컬럼의 모든 숫자들을 지우려고 했는데 작동이 되지 않았고 해결책을 찾지 못했다. 아시는 분 댓글 남겨주세요ㅜㅜ
+
+*gsub을 사용해서 series컬럼의 모든 숫자들을 지우려고 했는데 작동이 되지 않았고 해결책을 찾지 못했다. 아시는 분 댓글 남겨주세요ㅜㅜ*
 
 ​
 
@@ -221,6 +222,7 @@ select를 해서 그 시리즈 번호에 맞는 시리즈명을 나오게 하고
 
 
 "Always," said Snape. - J.K.Rowling, Harry Potter and the Deathly Hallows.
+
 나의 인생 작가님들의 책을 처음 만날 수 있었던 시리즈다.
 
 
@@ -232,12 +234,14 @@ select를 해서 그 시리즈 번호에 맞는 시리즈명을 나오게 하고
 ​
 ​
 
-###결론 1: 나는 아름다운 디자인의 노예. 그래서 민음사 시리즈들의 노예. (실제로 모던 클래식 사진 찾아보면서 심장 BPM이 240이었다.)
+**결론 1: 나는 아름다운 디자인의 노예. 그래서 민음사 시리즈들의 노예. (실제로 모던 클래식 사진 찾아보면서 심장 BPM이 240이었다.)
 
-###결론 2: 민음사가 디자인을 압도적으로 내 취향으로 한다면 문학동네는 무난하게 다 적당히 내 입맛에 맞게 잘 한다.
+결론 2: 민음사가 디자인을 압도적으로 내 취향으로 한다면 문학동네는 무난하게 다 적당히 내 입맛에 맞게 잘 한다.
 
-###결론 3: 민음사 책은 종이책으로 직접 사서 모을거고 다른 책들은 이북으로 읽어야겠다^^
+결론 3: 민음사 책은 종이책으로 직접 사서 모을거고 다른 책들은 이북으로 읽어야겠다^^**
 
+
+- 끝 -
 ​
 <script src="https://gist.github.com/hailey99/1400e4e5bb6baac1c8e676f56fb34157.js"></script>
 ​
@@ -246,14 +250,12 @@ select를 해서 그 시리즈 번호에 맞는 시리즈명을 나오게 하고
 
 ​
 
-- 끝 -
-
 ​
 ​
 
 ​
 
-​
+
 
 + 한국과 북미 책 소비성향, 디자인의 차이에 대한 나의 짧은 분석!
 
