--- a/_posts/blog/2018-12-26-3.markdown
+++ b/_posts/blog/2018-12-26-3.markdown
@@ -8,6 +8,9 @@ tag:
 - blog
 - Book
 - Reading
+- 민음사
+- 최진영
+- 정세랑
 
 category: blog
 author: Hailey Haeun Park
@@ -20,10 +23,6 @@ description:
 ​
 
 <li>글을 안 쓰고 싶었다. 머릿속에 새로운 것들이 마구마구 들어오니까 그 사이에서 중심을 잡는게 어려웠다. 나의 의견과 남의 의견을 구분하는 게 어려웠고, 남이 제공해주는 새로운 시선을 소화해 온전한 나의 것으로 만드는 과정이 아주 많이 생략되어있었음을 느꼈다. 마냥 산뜻할 수 없는 말이라면 책임질 수 있는 말만 하고 싶다.</li>
-
-​
-
-<li>눈에 보이지 않는 것으로 살아가기. 가능은 한 건가? 모든 첫인상은 눈에 보이는 것으로 결정되기 마련인데. 나를 온전히 좋아해주는 사람들은 눈이 아닌 무엇으로 나를 바라봐주고 있는건지? 어쩌면 그런 확신을 할 수 있었던 건지?</li>
 
 
 
