--- a/_posts/blog/2018-12-31-3.markdown
+++ b/_posts/blog/2018-12-31-3.markdown
@@ -34,9 +34,7 @@ description:
 
 
 
-*“나랑 같이 갈래?”*
-
-나로썬 도리를 사랑하지 않을 도리가 없다.
+*“나랑 같이 갈래?”*  도리를 사랑하지 않을 도리가 없다.
 
 
 
@@ -44,11 +42,12 @@ description:
 
 
 
-
+![An eagle / Image by jmarti20 from Pixabay](http://hailey99.github.io/assets/images/free1)
 
 #### - 말하지 않아서 아름다운
 
-**"‘작가의 말’에도 썼지만, 말하지 않은 것이 많아요. 수화 내용도 그렇고 <마 렌디 뿌르 꼰뗀또>도 많은 성악가가 부른 노래지만 누가 부른 건지, 그런 기본적인 정보도 다 가렸어요. 제가 누구의 노래라고 말해버리면 사람들이 그것을 찾아 들을 것이고, 그 이미지가 딱 박혀버리잖아요. 그것보다는 그냥 각자의 버전이 있으면 좋겠다는 생각이었어요. 같은 의미로 각자의 마음 속 도리와 지나가 다 달랐으면 좋겠어요."** / *from https://www.wordswithoutborders.org/dispatches/article/an-interview-with-choi-jin-young-so-j-lee-korean-language*
+** "말하지 않은 것이 많아요. 수화 내용도 그렇고 <마 렌디 뿌르 꼰뗀또>도 많은 성악가가 부른 노래지만 누가 부른 건지, 그런 기본적인 정보도 다 가렸어요. 제가 누구의 노래라고 말해버리면 사람들이 그것을 찾아 들을 것이고, 그 이미지가 딱 박혀버리잖아요. 그것보다는 그냥 각자의 버전이 있으면 좋겠다는 생각이었어요. 같은 의미로 각자의 마음 속 도리와 지나가 다 달랐으면 좋겠어요." **
+/ 출처: 아래 인터뷰
 
 최진영의 글은 설명하지 않는다. 그 덕에 개인마다 받아들이는 게 다르고, 다른 포인트에서 자신을 발견하게 되는 것이다. 마크 로스코의 작품이 사람들을 울리는 것처럼.
 
@@ -65,7 +64,7 @@ description:
 
 
 
-
+![A road / Image by Free-photos from Pixabay](http://hailey99.github.io/assets/images/free2)
 #### - 내가 보는 현실이 '해피 엔딩'이 아닌데
 
 ##### "이전의 소설들은 결말이 비극적이었던 경우가 많고 그래서 자괴감이 깊었어요. 내가 보는 현실이 해피엔딩이 아닌데 소설은 해피엔딩으로 만드는 게 거짓말 같았거든요. 거짓 희망을 주는 것 같았어요. 희망을 얘기하는 것 자체가 기만 같았고요. 그럼에도 불구하고 '왜 나는 소설 안에서라도 뭔가 돌파구를 만들지 못하는 걸까'라는 자괴감이 있었죠. 내가 사랑하는 인물들을 지옥으로 끌어들이고, 불행하게 하는 것에 대한 자책감도 있었고요. 그래서 이번에는 현실에서는 절대 살아남을 수 없을 것 같다고 생각하는 인물들을 소설에서만큼은 끝까지 살리고 싶었어요."
@@ -74,7 +73,7 @@ description:
 
 
 
-
+![A road / Image by Bessi from Pixabay](http://hailey99.github.io/assets/images/free3)
 
 우리는 재난 속에서 어떤 선택을 하게 될까? '새로운 국가의 주인'이 되고자 딸에게 총구를 겨니는 사람이 될까, 하루하루를 소중하게 모아 따뜻한 바다까지 가게 될까?
 
@@ -83,3 +82,8 @@ description:
 
 
 최진영 작가가 글을 통해 말하고자 하는 것들. 그것들이 내 2018년, 가장 중요한 것들이었다. 어쩌면 2019년에도 그럴지 몰라.
+
+
+
+
+https://www.wordswithoutborders.org/dispatches/article/an-interview-with-choi-jin-young-so-j-lee-korean-language
