--- a/_posts/blog/2018-12-31-4.markdown
+++ b/_posts/blog/2018-12-31-4.markdown
@@ -42,7 +42,7 @@ description:
 
 
 
-![An eagle / Image by jmarti20 from Pixabay](http://hailey99.github.io/assets/images/free1)
+![An eagle / Image by jmarti20 from Pixabay](http://hailey99.github.io/assets/images/free1.jpg)
 
 #### - 말하지 않아서 아름다운
 
@@ -64,7 +64,7 @@ description:
 
 
 
-![A road / Image by Free-photos from Pixabay](http://hailey99.github.io/assets/images/free2)
+![A road / Image by Free-photos from Pixabay](http://hailey99.github.io/assets/images/free2.jpg)
 #### - 내가 보는 현실이 '해피 엔딩'이 아닌데
 
 ##### "이전의 소설들은 결말이 비극적이었던 경우가 많고 그래서 자괴감이 깊었어요. 내가 보는 현실이 해피엔딩이 아닌데 소설은 해피엔딩으로 만드는 게 거짓말 같았거든요. 거짓 희망을 주는 것 같았어요. 희망을 얘기하는 것 자체가 기만 같았고요. 그럼에도 불구하고 '왜 나는 소설 안에서라도 뭔가 돌파구를 만들지 못하는 걸까'라는 자괴감이 있었죠. 내가 사랑하는 인물들을 지옥으로 끌어들이고, 불행하게 하는 것에 대한 자책감도 있었고요. 그래서 이번에는 현실에서는 절대 살아남을 수 없을 것 같다고 생각하는 인물들을 소설에서만큼은 끝까지 살리고 싶었어요."
@@ -73,7 +73,7 @@ description:
 
 
 
-![A road / Image by Bessi from Pixabay](http://hailey99.github.io/assets/images/free3)
+![A road / Image by Bessi from Pixabay](http://hailey99.github.io/assets/images/free3.jpg)
 
 우리는 재난 속에서 어떤 선택을 하게 될까? '새로운 국가의 주인'이 되고자 딸에게 총구를 겨니는 사람이 될까, 하루하루를 소중하게 모아 따뜻한 바다까지 가게 될까?
 
