--- a/_posts/blog/2018-12-31-4.markdown
+++ b/_posts/blog/2018-12-31-4.markdown
@@ -27,6 +27,10 @@ description:
 캐나다에서의 생활을 시작한 5월 초, 내 기숙사 방에서 이 글을 읽었고 그로부터 약 8개월을 꽉 채워보낸 후 내가 왜 이렇게 이 책을 사랑했는지 문자로 정리해낼 수 있었다. SPOILER ALERT.
 
 
+<br>
+<br>
+![A girl / Image by Free-photos from Pixabay](http://hailey99.github.io/assets/images/free0.jpg)
+
 
 #### - 우리 도리
 
@@ -39,20 +43,20 @@ description:
 
 
 
-
-
-
+<br>
+<br>
 ![An eagle / Image by jmarti20 from Pixabay](http://hailey99.github.io/assets/images/free1.jpg)
 
 #### - 말하지 않아서 아름다운
 
-** "말하지 않은 것이 많아요. 수화 내용도 그렇고 <마 렌디 뿌르 꼰뗀또>도 많은 성악가가 부른 노래지만 누가 부른 건지, 그런 기본적인 정보도 다 가렸어요. 제가 누구의 노래라고 말해버리면 사람들이 그것을 찾아 들을 것이고, 그 이미지가 딱 박혀버리잖아요. 그것보다는 그냥 각자의 버전이 있으면 좋겠다는 생각이었어요. 같은 의미로 각자의 마음 속 도리와 지나가 다 달랐으면 좋겠어요." **
+##### "말하지 않은 것이 많아요. 수화 내용도 그렇고 <마 렌디 뿌르 꼰뗀또>도 많은 성악가가 부른 노래지만 누가 부른 건지, 그런 기본적인 정보도 다 가렸어요. 제가 누구의 노래라고 말해버리면 사람들이 그것을 찾아 들을 것이고, 그 이미지가 딱 박혀버리잖아요. 그것보다는 그냥 각자의 버전이 있으면 좋겠다는 생각이었어요. 같은 의미로 각자의 마음 속 도리와 지나가 다 달랐으면 좋겠어요."
 / 출처: 아래 인터뷰
 
 최진영의 글은 설명하지 않는다. 그 덕에 개인마다 받아들이는 게 다르고, 다른 포인트에서 자신을 발견하게 되는 것이다. 마크 로스코의 작품이 사람들을 울리는 것처럼.
 
 
-
+<br>
+<br>
 ##### "퀴어를 그냥 내민 것처럼 혼혈도 그냥 내밀고 싶었고, 장애도 그냥 내밀고 싶었어요. 그런 것에 어떤 설명을 해야한다는 것 자체가 부조리하다고 생각했어요."
 
 나는 그 불친절의 정점에 등장인물 미소가 있다고 생각한다. 작가는 미소가 청각장애를 가졌다는 것을 굳이 설명하지 않는다. 미소에게 대사 한 줄의 분량도 주지 않는다. 그저 '미소가 손짓으로 물었다'는 문장으로 내가 미소의 '없음'을 알아보게 하고, 미소 시점의 에필로그를 통해 미소가 나의 '없음'을 알아보게 한다.
@@ -63,7 +67,8 @@ description:
 
 
 
-
+<br>
+<br>
 ![A road / Image by Free-photos from Pixabay](http://hailey99.github.io/assets/images/free2.jpg)
 #### - 내가 보는 현실이 '해피 엔딩'이 아닌데
 
@@ -72,7 +77,8 @@ description:
 내가 느끼기에 최진영은 그 누구보다도 '구덩이에 해림의 시신을 두고 흙을 덮을 때 비로소 눈이 트였다. 나는 차디찬 땅바닥에 해림을 급히 버리고 있었던 것이다'라는 류의 글을 잘 쓰는 사람이다. 그럼에도 그는 전염병이 돌고 무장단체간의 전쟁이 벌어지고 여자아이의 간을 먹어야한다는 낭설이 설득력을 얻는 포스트 아포칼립스 시대를 배경으로, '해가 지는 곳으로'를 써냈다. '현실에서는 절대 살아남을 수 없을 것 같은 인물들'이 살아남는 이야기. 한국에서는 없던 꿈을 재난 이후 갖게 되는 이야기. '사랑하지 않음'을 말할 수 있게 되는, 동시에 '사람이 무엇인지 잊지 말아야한다'고 끊임없이 말하는 이야기.
 
 
-
+<br>
+<br>
 ![A road / Image by Bessi from Pixabay](http://hailey99.github.io/assets/images/free3.jpg)
 
 우리는 재난 속에서 어떤 선택을 하게 될까? '새로운 국가의 주인'이 되고자 딸에게 총구를 겨니는 사람이 될까, 하루하루를 소중하게 모아 따뜻한 바다까지 가게 될까?
