--- a/_posts/blog/2018-12-31-4.markdown
+++ b/_posts/blog/2018-12-31-4.markdown
@@ -49,10 +49,10 @@ description:
 
 #### - 말하지 않아서 아름다운
 
-##### "말하지 않은 것이 많아요. 수화 내용도 그렇고 <마 렌디 뿌르 꼰뗀또>도 많은 성악가가 부른 노래지만 누가 부른 건지, 그런 기본적인 정보도 다 가렸어요. 제가 누구의 노래라고 말해버리면 사람들이 그것을 찾아 들을 것이고, 그 이미지가 딱 박혀버리잖아요. 그것보다는 그냥 각자의 버전이 있으면 좋겠다는 생각이었어요. 같은 의미로 각자의 마음 속 도리와 지나가 다 달랐으면 좋겠어요."
+##### "말하지 않은 것이 많아요. 수화 내용도 그렇고 <Ma rendi pur contento>도 많은 성악가가 부른 노래지만 누가 부른 건지, 그런 기본적인 정보도 다 가렸어요. 제가 누구의 노래라고 말해버리면 사람들이 그것을 찾아 들을 것이고, 그 이미지가 딱 박혀버리잖아요. 그것보다는 그냥 각자의 버전이 있으면 좋겠다는 생각이었어요. 같은 의미로 각자의 마음 속 도리와 지나가 다 달랐으면 좋겠어요."
 / 출처: 아래 인터뷰
 
-최진영의 글은 설명하지 않는다. 그 덕에 개인마다 받아들이는 게 다르고, 다른 포인트에서 자신을 발견하게 되는 것이다. 마크 로스코의 작품이 사람들을 울리는 것처럼.
+최진영의 글은 설명하지 않는다. 그 덕에 개인마다 받아들이는 게 다르고, 다른 포인트에서 자신을 발견하게 되는 것이다.
 
 
 <br>
@@ -90,6 +90,7 @@ description:
 최진영 작가가 글을 통해 말하고자 하는 것들. 그것들이 내 2018년, 가장 중요한 것들이었다. 어쩌면 2019년에도 그럴지 몰라.
 
 
+<br>
 
 
-https://www.wordswithoutborders.org/dispatches/article/an-interview-with-choi-jin-young-so-j-lee-korean-language
+인터뷰 출처: https://www.wordswithoutborders.org/dispatches/article/an-interview-with-choi-jin-young-so-j-lee-korean-language
