--- a/_posts/blog/2019-05-13-5.markdown
+++ b/_posts/blog/2019-05-13-5.markdown
@@ -26,7 +26,7 @@ description:
 
 ​
 
-<li>인사의 힘?! 첫날 행사 준비 쉬프트를 맡아서 아침에 갔는데 나 포함 봉사자가 3명 있었음. 근데 어색한거 싫어서 걍 내가 먼저 통성명하자고 하고 말 계속 검... 일하는데 계속 새로운 봉사자들이 왔다. 다들 유쾌했고 이번 해커톤을 성공적으로 마무리하겠다는 열정을 가지고 있었다. 덕분에 정말 즐거웠고 좋은 추억 만들었어요! </li>
+<li>인사의 힘?! 첫날 행사 준비 쉬프트를 맡아서 아침에 갔는데 나 포함 봉사자가 3명 있었음. 근데 어색한거 싫어서 걍 내가 먼저 통성명하자고 하고 말 계속 걸었다. 일하는데 계속 새로운 봉사자들이 왔다. 다들 유쾌했고 이번 해커톤을 성공적으로 마무리하겠다는 열정을 가지고 있었다. 덕분에 정말 즐거웠고 좋은 추억 만들었어요! </li>
 
 ​
 
@@ -34,15 +34,15 @@ description:
 
 ​
 
-<li> 저 이벤트 스폰서가 꽤 괜찮았다 일단 서울대 카이스트 유니스트 지스트 머... 먹을거, 숙박 머 다 후원 빵빵했는데 아예 참관하러 왔다가 추가로 스폰하고 싶다고 한 기업들이 있었음. 당연한거겠지만 기업들이 이런 행사 예의주시하고 있을 줄 몰랐는데.. 아는 사람들은 다 알고 있었구나 싶어서 이 커뮤니티에 어떻게든 들어가야겠다고 다짐함. 머 물론 저도 어떻게 그 커뮤니티에 머리 뚫고 들어가서 봉사활동할 기회 있었던거지만용.</li>
+<li> 이벤트 후원사들중 아예 참관하러 왔다가 추가로 스폰하고 싶다고 한 기업들이 있었다. 당연한거겠지만 기업들이 이런 행사 예의주시하고 있을 줄 몰랐는데, 아는 사람들은 다 알고 있었구나 싶어서 이 커뮤니티에 어떻게든 들어가야겠다고 다짐했다. 기회는 정말 내가 찾으러다녀야하나봐.</li>
 
 ​
 
-<li>신청자 받아서 스타트업 미팅 세션도 있었다. 스타트업 창업, 투자 등등 궁금한점 있는 사람들이 멘토링 받을 수 있는 거였음. 한 친구가 참여했길래 물어보니까 아이디어가 있어서 한번 물어보려고 신청했다는 거 듣고 아 이사람들 진짜.... 부지런하고 멋지고... 열정적이다... 느끼면서 다시한번 열심히 살자구 생각...^^ </li>
+<li>신청자 받아서 스타트업 미팅 세션도 있었다. 스타트업 창업, 투자 등등 궁금한점 있는 사람들이 멘토링 받을 수 있는 거였음. 한 친구가 참여했길래 물어보니까 아이디어가 있어서 한번 물어보려고 신청했다는 거 듣고 아 이사람들 진짜 부지런하고 멋지고 열정적이다... 느끼면서 다시한번 열심히 살자구 생각했다...^^ </li>
 
 ​
 
-<li> 빛공해의 도시 서울에서 진행된 해커톤답게 자원봉사자들이 조명을 위해 창문에 검정 시트지를 다 붙였다. 남자 조명 감독이 행사 처음부터 끝까지 함께 하셨는데 참 센스 있는 분이셨다. 탁구공마냥 가볍고 통통 위트있게 말씀하시는데 타고난 센스에 연륜이 합쳐진 것 같았달까! 여러모로 그분의 상황 대처 능력과 순발력... 배우고싶다고 생각했다. </li>
+<li> 빛공해의 도시 서울에서 진행된 해커톤답게 자원봉사자들이 조명을 위해 창문에 검정 시트지를 다 붙였다. 남자 조명 감독이 행사 처음부터 끝까지 함께 하셨는데 참 센스 있는 분이셨다. 탁구공마냥 가볍고 통통 위트있게 말씀하시는데 타고난 센스에 연륜이 합쳐진 것 같았달까! 여러모로 그분의 상황 대처 능력과 순발력... 공부한다고 되는게 아니겠지만, 배우고싶다고 생각했다. </li>
 
 ​
 
@@ -52,11 +52,11 @@ description:
 
 ​
 
-<li> 예전에 오퍼레터 받고 장학금인터뷰까지 봤던 대학교 학생들이 참가했다. 재미있었다 내가 만약 밴더스니치에서 다른 선택을 했다면 아예 다른 상황이었을 수도 있었겠구나 싶은 거? 그렇읍니다 저 밴더스니치 공략 찾아서 여러 결말 다 봣읍니다... </li>
+<li> 예전에 오퍼레터 받고 장학금인터뷰까지 봤던 대학교 학생들이 참가했다. 재미있었다 내가 만약 밴더스니치에서 다른 선택을 했다면 아예 다른 상황이었을 수도 있었겠구나 싶은 거? 그렇습니다 저 밴더스니치 공략 찾아서 여러 결말 다 봤습니다... </li>
 
 ​
 
-<li> 언어가 재미있다는 건 무슨 느낌이지. 딱히 '영어'가 재미있는 건 모르겠고 걍 내가 대화할 수 있는 사람의 폭이 늘어나니까 재미있는 듯ㅋㅋㅋ  한국어로는 왠만하면 한국인하고만 대화해서 바로바로 파악되는데 영어 쓰면 먼... 인도네시안인데 대만사는 애부터 유럽인 아프리카인 머 다 대화할 수 있으니까 ㅋㅋㅋ 이번 봉사하면서 영어 캐나다에 있을 때만큼 썼는데 영어가 그 사이에 또 는 느낌이더라고요 재밌고 기분 좋았습니다 이맛에 영어한다;; </li>
+<li> 언어가 재미있다는 건 무슨 느낌이지. 딱히 '영어'가 재미있는 건 모르겠고 걍 내가 대화할 수 있는 사람의 폭이 늘어나니까 재미있는 듯ㅋㅋㅋ 한국어로는 왠만하면 한국인하고만 대화해서 바로바로 파악되는데 대화할때 영어 쓰면 훨씬 출신지역에 국한을 덜 받으니까 좋다. 이번 봉사하면서 영어 캐나다에 있을 때만큼 썼는데 영어가 그 사이에 또 는 느낌이더라고요 재밌고 기분 좋았습니다 이맛에 영어한다;; </li>
 
 ​
 
