--- a/_posts/blog/2018-12-26-3.markdown
+++ b/_posts/blog/2018-12-26-3.markdown
@@ -46,7 +46,13 @@ description:
 ![](http://hailey99.github.io/assets/images/1226.png)
 
 
-<img src="http://hailey99.github.io/assets/images/1226.png"onclick="document.getElementById('modal01').style.display='block'" class="w3-hover-opacity">
+<img src="http://hailey99.github.io/assets/images/1226.png"
+onclick="document.getElementById('modal01').style.display='block'" class="w3-hover-opacity">
 <div id="modal01" class="w3-modal w3-animate-zoom" onclick="this.style.display='none'">
   <img class="w3-modal-content" src="http://hailey99.github.io/assets/images/1226.png">
 </div>
+
+
+<img class="w3-hover-opacity" src="http://hailey99.github.io/assets/images/1226.png" alt="Norway" onclick="document.getElementById('img01').style.display='block'" style="width:100%;cursor:pointer">
+
+<img class="w3-hover-opacity" img src="http://hailey99.github.io/assets/images/1226.png" onclick="document.getElementById('modal01').style.display='block'" class="w3-hover-opacity">
