--- a/_posts/project/2019-07-20-word4.markdown
+++ b/_posts/project/2019-07-20-word4.markdown
@@ -22,16 +22,14 @@ description: Try! Flutter Banner Design
 <br>
 
 ![](http://hailey99.github.io/assets/images/tf0.jpg)
-**Festa Banner / 1600x900 pixel, RGB**
-designed using Photoshop and Illustrator
+**Festa Banner / 1600x900 px, RGB/ Photoshop and Illustrator**
 <br>
 
 ![Main Banner](http://hailey99.github.io/assets/images/tf1.jpg)
-**Main Banner / 600x1800 millimeters, CMYK**
-designed using Photoshop and Illustrator
+**Main Banner / 600x1800 mm, CMYK/ Photoshop and Illustrator**
 <br>
 
 ![](http://hailey99.github.io/assets/images/tf2.jpg)
-**Direction Banner / 600x1800 millimeters, CMYK**
- designed using Photoshop and Illustrator
+**Location Banner / 600x1800 mm, CMYK/ Photoshop and Illustrator**
+
 <br>
