--- a/_posts/blog/2018-11-17-1.markdown
+++ b/_posts/blog/2018-11-17-1.markdown
@@ -11,7 +11,7 @@ tag:
 - Google
 
 category: blog
-author: Hailey Haeun Park
+author: Hailey Park
 description: Joined a terrific event about Data Journalism.
 ---
 
