--- a/_posts/blog/2019-05-01-2.markdown
+++ b/_posts/blog/2019-05-01-2.markdown
@@ -10,7 +10,7 @@ tag:
 - Safeplanet
 
 category: blog
-author: Hailey Haeun Park
+author: Hailey Park
 description: I've FINALLY got my own Github page!
 ---
 
