--- a/_posts/project/2018-12-28-word1.markdown
+++ b/_posts/project/2018-12-28-word1.markdown
@@ -9,7 +9,7 @@ tag:
 - project
 - wordproject
 category: project
-author: Hailey Haeun Park
+author: Hailey Park
 description: Word Project #1
 ---
 
