--- a/_posts/project/2019-07-20-word4.markdown
+++ b/_posts/project/2019-07-20-word4.markdown
@@ -12,7 +12,7 @@ tag:
 - Design
 - Festa
 category: project
-author: Hailey Haeun Park
+author: Hailey Park
 description: Try! Flutter Banner Design
 ---
 
