--- a/_posts/project/2019-01-03-word3.markdown
+++ b/_posts/project/2019-01-03-word3.markdown
@@ -119,7 +119,7 @@ description: Word Project #3
 
 ​
 
-View(num)
+**View(num)**
 
 ​
 ![](http://hailey99.github.io/assets/images/3-7.png)
@@ -133,6 +133,7 @@ select를 해서 그 시리즈 번호에 맞는 시리즈명을 나오게 하고
 그 뒤에 해당 책의 번호가 적혀있어서 R로는 그 책들을 하나로 묶을 수 없었다.
 
 예를 들면
+
 ![](http://hailey99.github.io/assets/images/3-8.png)
 
 이런 식으로 같은 문동 세계문학전집이면 시리즈 번호는 같지만 135번, 79번으로 완전히 같은 변수를 갖지 않는다. 그래서 전처리를 하지 않으면 같이 묶어낼 수 없다.
@@ -159,43 +160,41 @@ select를 해서 그 시리즈 번호에 맞는 시리즈명을 나오게 하고
 
 ​
 
-​
-​
-
 ​![](http://hailey99.github.io/assets/images/3-10.png)
 
+
+
+
+
+![](http://hailey99.github.io/assets/images/3-11.jpeg)
 **1위 민음사 세계문학전집**
 
 ....... 말할 필요가 없다 난 스카이캐슬 보면서 우주네 집에 이 시리즈 쫙 꽂혀있는거 보고 이러니까 사교육없이도 우주가 예서 못지않게 공부를 잘 하죠! (왈칵) 한 사람이다. 우주짱! 우주네 가족짱! (이수임 씨 제 이모랑 똑같이 생기셔서 저 한서진씨보다 이수임씨 편입니다 혜나우주 밉니다 저.)
 
 개인적으로 세로가 좁아서 읽기 불편한데 글씨체가 여리여리해서 예쁘다.  
 
-![](http://hailey99.github.io/assets/images/3-11.png)
-​
 
-​
 
-​
 
+
+![](http://hailey99.github.io/assets/images/3-12.jpg)
 
 **2위 문학동네 세계문학전집**
 
 개인적으로 나는 문학동네 세계문학전집을 선호한다. 민음사 세계문학전집에는 '문학은 시대에 맞게 끊임없이 새로 번역되어야한다~'는 말이 적혀있는데, 그럼에도 간혹 단어나 번역이 올드하다는 느낌을 받는다. 트렌드에 안 맞는다기보다 지금은 잘 쓰이지 않는 단어로의 번역이 많다고 하는게 적절할 듯 싶다(물론 책마다 번역이 달라서 단언하기 어렵다). 그에 반해 문학동네는 좀 더 쉬운 단어들로 번역된 느낌이다. 물론 이건 온전히 나의 취향일 뿐! (문동 전집 입덕작품은 '프랑켄슈타인')
 
-![](http://hailey99.github.io/assets/images/3-12.png)
-​
-
 
 ​
 
+
 ​
+
+​![](http://hailey99.github.io/assets/images/3-13.png) ![](http://hailey99.github.io/assets/images/open.jpg)
 
 **3위 열린책들 세계문학**
 
 민음사 전집에 비해 문동, 열린책들 전집은 구글 이미지 검색을 했을 때 사진이 많이 뜨지 않는다. 요즘은 인스타그램덕분에 굳이 책을 읽지 않아도 사진을 찍어 읽은 티를 낼 수 있는데, 확실히 민음사 전집이 그런면에서 적절한 디자인을 가졌구나하고 생각했다.
 
-![](http://hailey99.github.io/assets/images/3-13.png)
-​
 
 ​
 
@@ -203,6 +202,9 @@ select를 해서 그 시리즈 번호에 맞는 시리즈명을 나오게 하고
 
 ​
 
+​
+![](http://hailey99.github.io/assets/images/3-14.jpg)
+![](http://hailey99.github.io/assets/images/ga.jpg)
 **4위 민음사 모던클래식**
 
 원래 4,5위를 소개한 적은 없지만 이번엔 소개할 거다 왜냐면 디자인이 참 예쁘고 말그대로 '모던 클래식'이라 내가 정말 X10000000 좋아하는 시리즈이기 때문! (나는 고전을 별로 안 좋아하는 타입이라 세계문학전집보다 이 시리즈를 더 사랑한다.... ) 패밀리데이때 가장 많이 쟁일 시리즈이다.
@@ -211,12 +213,12 @@ select를 해서 그 시리즈 번호에 맞는 시리즈명을 나오게 하고
 
 예를 들면 코맥 매카시 / 가즈오 이시구로 / 마거릿 애트우드
 
-![](http://hailey99.github.io/assets/images/3-14.png)
-모옌의 개구리. 지금 읽는 책 다 읽으면 바로 읽을 책
 
 ​
 
 ​
+
+![](http://ojsfile.ohmynews.com/STD_IMG_FILE/2017/1108/IE002242235_STD.jpg)
 
 **5위 민음사 오늘의 젊은 작가**
 
@@ -226,7 +228,7 @@ select를 해서 그 시리즈 번호에 맞는 시리즈명을 나오게 하고
 나의 인생 작가님들의 책을 처음 만날 수 있었던 시리즈다.
 
 
-![](http://ojsfile.ohmynews.com/STD_IMG_FILE/2017/1108/IE002242235_STD.jpg)
+
 ​
 
 ​
