img folder change

--- a/_posts/blog/2018-11-17-1.markdown
+++ b/_posts/blog/2018-11-17-1.markdown
@@ -15,12 +15,12 @@ author: Hailey Park
 description: Joined a terrific event about Data Journalism.
 ---
 
-<img src="http://hailey99.github.io/assets/images/can0.png" width="600">
+<img src="http://hailey99.github.io/assets/images/google_CA_Post/can0.png" width="600">
  *from https://humber.ca/today/events/data-driven-20-54102*
 
 
 
-<img src="http://hailey99.github.io/assets/images/can2.jpeg" width="600">
+<img src="http://hailey99.github.io/assets/images/google_CA_Post/can2.jpeg" width="600">
 
 
 
@@ -30,12 +30,12 @@ description: Joined a terrific event about Data Journalism.
 
 
 
-<img src="http://hailey99.github.io/assets/images/can4.jpg" width="600">
+<img src="http://hailey99.github.io/assets/images/google_CA_Post/can4.jpg" width="600">
 
 정말 맛있었던 점심.
 
 
-<img src="http://hailey99.github.io/assets/images/can5.jpeg" width="600">
+<img src="http://hailey99.github.io/assets/images/google_CA_Post/can5.jpeg" width="600">
 
 
 
@@ -45,14 +45,14 @@ description: Joined a terrific event about Data Journalism.
 
 
 
-<img src="http://hailey99.github.io/assets/images/can7.jpeg" width="600">
+<img src="http://hailey99.github.io/assets/images/google_CA_Post/can7.jpeg" width="600">
 
 
 오늘 참석했던 행사 완전 Motivating.. 캐나다 온 순간부터 내 comfort zone에서 벗어났으니까 불편하고 힘든 거 당연한건데 그걸 잊고 지쳐가고 있었다. 의사소통부터가 완벽하게 안되니 편안할 수 없는게 당연한건데.. 그렇게 comfort zone에서 벗어나서 press forward하고 싶었으면서 몽총이다 몽총이야.<
 
 
 
-<img src="http://hailey99.github.io/assets/images/can8.jpg" width="600">
+<img src="http://hailey99.github.io/assets/images/google_CA_Post/can8.jpg" width="600">
 
 
 **나는 똑똑한 사람을 동경한다. 연륜을 가진 어른들에 나를 비교하면서 좌절도 많이 한다. 저 사람은 저렇게 능숙하고 여유로운데 난 왜 이렇게 부족하지?하면서. 그 사람도 분명히 나같은 시기가 있었고 다 실수,실패와 경험을 통해서 지금 그 자리에 있게 된 건데 말이다. 하고 싶은 거, 욕심은 많은데 미숙한 내가 맘에 들지 않을 때도 있다. But! 이건 정말 넌센스니까. 'Success is when preparation meets opportunity.' 새기면서 지금 내가 할 수 있는 거 열심히 하자.**
