--- a/_posts/project/2018-12-28-word1.markdown
+++ b/_posts/project/2018-12-28-word1.markdown
@@ -1,5 +1,5 @@
 ---
-title: "낱말 프로젝트 01: Words"
+title: "[R] 낱말 프로젝트 01: Words"
 layout: post
 date: 2018-12-28 19:02
 image: /assets/images/markdown.jpg
